2013-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-tag-form): Protect against degenerate forms.

	* shr.el (shr-expand-url): Expand URLs that start with a slash
	correctly.

	* eww.el (eww-submit): Get submit button logic right.

	* shr.el (shr-final-table-render): New variable to signal when we're
	doing the final table rendering so that we can collect more data at
	that point.

	* eww.el (eww-submit): Make form submission work.
	(eww-tag-input): Implement submit buttons.
	(eww-click-radio): Implement radio and checkboxes.
	(eww-submit): Handle hidden elements.

	* shr.el (shr-descend): Allow other packages to override (or provide)
	rendering of elements.
	(shr-expand-url): Strip query strings from URLs before expanding them.

	* eww.el: Don't require cl-lib.
	(eww-tag-form): Start form support.

	* eww.el: Start writing a new, tiny web browser.
	(eww-previous-url): New command.
	(eww-quit): New command.

2013-06-10  Albert Krewinkel  <krewinkel@moltkeplatz.de>

	* sieve.el: Put point at beginning of buffer when viewing a script.
	(sieve-open-server): respect the PORT parameter. Show the correct port
	number in sieve-buffer's header. Fixed code to also work with a string
	as port specifier. Properly close the connection on pressing 'q'. Make
	sieve-manage-quit close the connection and process buffer. Also, remove
	duplicate keybinding for 'q'.

2013-06-10  Roy Hashimoto  <roy.hashimoto@gmail.com>  (tiny change)

	* mm-view.el (mm-pkcs7-signed-magic): Allow newline in the regexp and
	make it easier to read.
	(mm-pkcs7-enveloped-magic): Ditto.

2013-06-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-ems.el (gnus-image-type-available-p): Test `display-images-p'
	before `image-type-available-p' to avoid loading the image libraries
	needlessly.

2013-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-date-ut, article-update-date-lapsed): Don't
	assume Date header begins with "Date", that may be customized into